tests/test_error_multiple_definition.err
Error in line 3: "a" already defined in line 2.
