tests/test_error_multiple_definition.uk
def main() void{
    int a;
    int a;
    return();
}
